Se agregaron cambios en CSS

--- a/practica-programada-1/segunda-parte/index.html
+++ b/practica-programada-1/segunda-parte/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clínica WebTech Solutions</title>
+    <title>WebTech Solutions</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1546/1546124.png" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar">
